Pin versions of some dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,10 @@ channels:
   - bioconda
 dependencies:
   - mason=2.0.9
-  - snakemake
-  - python
-  - pysam
-  - bwa
-  - samtools
-  - cmake
+  - snakemake-minimal=7
+  - python=3.10
+  - pysam=0.22
+  - bwa=0.7.17
+  - samtools=1.18
+  - cmake=3.27
+  - cxx-compiler
