--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -14,11 +14,11 @@ COMMITS = {
 PROGRAMS = expand("strobealign-{commit}", commit=COMMITS) + ["bwamem"]
 
 localrules:
-    accuracy_csv, runtime_mem_csv, concat_accuracies, concat_memtime
+    measurement_csv, concat_csvs
 
 rule final:
     input:
-        expand("results/{kind}-{genome}-{ends}.csv", kind=("memtime", "accuracy"), genome=GENOMES, ends=ENDS)
+        expand("results/{genome}-{ends}.csv", genome=GENOMES, ends=ENDS)
 
 
 # Map reads with BWA-MEM
@@ -139,55 +139,33 @@ rule get_accuracy:
         "\n mv -v {output.txt}.tmp {output.txt}"
 
 
-rule accuracy_csv:
+rule result_csv:
     output:
-        csv="results/{prog}/{dataset}-{genome}-{read_length}/accuracy.{ends}.csv"
+        csv="results/{prog}/{dataset}-{genome}-{read_length}/result.{ends}.csv"
     input:
         txt="results/{prog}/{dataset}-{genome}-{read_length}/accuracy.{ends}.txt",
         log="results/{prog}/{dataset}-{genome}-{read_length}/{ends}.bam.log",
     shell:
         """
         echo -n {wildcards.prog},{wildcards.dataset},{wildcards.read_length}, > {output.csv}.tmp
-        cut -f1-3 {input.txt} | tr '\\t' , >> {output.csv}.tmp
-        mv {output.csv}.tmp {output.csv}
-        """
-
-rule memtime_csv:
-    output:
-        csv="results/{prog}/{dataset}-{genome}-{read_length}/memtime.{ends}.csv"
-    input:
-        log="results/{prog}/{dataset}-{genome}-{read_length}/{ends}.bam.log"
-    shell:
-        """
+        cut -f1-3 {input.txt} | tr '\\t' , | tr -d '\\n' >> {output.csv}.tmp
         user_time=$(awk '/User time/ {{print $NF}}' {input.log})
         memory=$(awk '/Maximum resident/ {{print $NF/1048576}}' {input.log})
         indexing_time=$(awk '/Total time indexing:/ {{print $4}}' {input.log})
         mapping_time=$(awk '/Total time mapping:/ {{print $4}}' {input.log})
-        echo {wildcards.prog},{wildcards.dataset},{wildcards.read_length},${{mapping_time}},${{memory}} > {output}
+        echo ,${{mapping_time}},${{memory}} >> {output}.tmp
+        mv {output.csv}.tmp {output.csv}
         """
 
-def accuracies(wildcards):
+def csvs(wildcards):
     return expand(
-        f"results/{{prog}}/{{dataset}}-{wildcards.genome}-{{read_length}}/accuracy.{wildcards.ends}.csv",
+        f"results/{{prog}}/{{dataset}}-{wildcards.genome}-{{read_length}}/result.{wildcards.ends}.csv",
         prog=PROGRAMS, dataset=DATASETS, read_length=READ_LENGTHS
     )
 
 
-rule concat_accuracies:
-    output: "results/accuracy-{genome,([^/]*)}-{ends,(se|pe)}.csv"
-    input: accuracies
+rule concat_csvs:
+    output: "results/{genome,([^/]*)}-{ends,(se|pe)}.csv"
+    input: csvs
     shell:
-        "( echo tool,dataset,read_length,aligned,accuracy,overaligned ; cat {input} ) > {output}"
-
-
-def memtimes(wildcards):
-    return expand(
-        f"results/{{prog}}/{{dataset}}-{wildcards.genome}-{{read_length}}/memtime.{wildcards.ends}.csv",
-        prog=PROGRAMS, dataset=DATASETS, read_length=READ_LENGTHS
-    )
-
-rule concat_memtime:
-    output: "results/memtime-{genome,([^/]*)}-{ends,(se|pe)}.csv"
-    input: memtimes
-    shell:
-        "( echo tool,dataset,read_length,time,memory ; cat {input} ) > {output}"
+        "( echo tool,dataset,read_length,aligned,accuracy,overaligned,time,memory ; cat {input} ) > {output}"
