--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -245,10 +245,12 @@ rule bam_accuracy:
     output:
         txt="results/{program}/{dataset}-{genome}-{read_length}/{ends}.bam.accuracy.txt"
     input:
-        truth="datasets/{dataset}/{genome}-{read_length}/truth.{ends}.bam",
-        bam="results/{program}/{dataset}-{genome}-{read_length}/{ends}.bam"
+        truth="datasets/{dataset}/{genome}-{read_length}/truth.pe.bam",
+        bam="results/{program}/{dataset}-{genome}-{read_length}/{ends}.bam",
+    params:
+        only_r1=lambda w: " --only-r1" if w.ends == "se" else ""
     shell:
-        "python get_accuracy.py --truth {input.truth} --predicted_sam {input.bam} > {output.txt}.tmp"
+        "python get_accuracy.py{params.only_r1} --truth {input.truth} --predicted_sam {input.bam} > {output.txt}.tmp"
         "\n mv -v {output.txt}.tmp {output.txt}"
 
 
