--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -16,7 +16,7 @@ PROGRAMS = expand("strobealign-{commit}", commit=COMMITS) + ["bwamem", "minimap2
 PLOTS = ("accuracy", "aligned", "time", "memory")
 
 localrules:
-    result_csv, concat_csvs, concat_genome_csvs
+    result_csv, concat_csvs, concat_genome_csvs, plot
 
 rule final:
     input:
