--- a/simx/Snakefile
+++ b/simx/Snakefile
@@ -8,10 +8,10 @@ READ_LENGTHS = (50, 75, 100, 150, 200, 300, 500)
 LIBRARIES = expand("{dataset}-{genome}-{read_length}", dataset=DATASETS, genome=GENOMES, read_length=READ_LENGTHS)
 ENDS = ("pe", "se")
 COMMITS = config["commits"]
-PROGRAMS = expand("strobealign-{commit[name]}", commit=COMMITS) + ["bwamem", "minimap2"]
+PROGRAMS = expand("strobealign-{commit[key]}", commit=COMMITS) + ["bwamem", "minimap2"]
 PLOTS = ("accuracy", "aligned", "time", "memory")
 
-COMMIT_TO_HASH_MAP = {c["name"]: c["hash"] for c in COMMITS}
+COMMIT_TO_HASH_MAP = {c["key"]: c["hash"] for c in COMMITS}
 
 localrules:
     result_csv, concat_csvs, concat_genome_csvs, plot_ends, plot_genomes
